RESOLVED FIXED52092
[Soup] ResourceHandleSoup does not handle encodedBlobData
https://bugs.webkit.org/show_bug.cgi?id=52092
Summary [Soup] ResourceHandleSoup does not handle encodedBlobData
Martin Robinson
Reported 2011-01-07 17:03:44 PST
Blob support was recently turned on my default, but this bug prevents http/tests/local/formdata/send-form-data-with-sliced-file.html from passing when beginDragWithFiles lands.
Attachments
Patch (9.89 KB, patch)
2011-10-01 19:31 PDT, Martin Robinson
no flags
Patch (11.03 KB, patch)
2011-10-02 23:48 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2011-10-01 19:31:54 PDT
Martin Robinson
Comment 2 2011-10-01 19:33:31 PDT
Jian, maybe you could take a look at my implementation
Martin Robinson
Comment 3 2011-10-01 19:34:07 PDT
..to verify its sanity.
Martin Robinson
Comment 4 2011-10-02 23:43:57 PDT
*** Bug 54234 has been marked as a duplicate of this bug. ***
Martin Robinson
Comment 5 2011-10-02 23:48:45 PDT
Martin Robinson
Comment 6 2011-10-02 23:49:41 PDT
There seems to be a little bit of code to support blob data for synchronous requests as well. I've included that in this patch and unskipped one more test.
Gustavo Noronha (kov)
Comment 7 2011-10-10 12:13:09 PDT
Comment on attachment 109445 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=109445&action=review Looks good! > Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:597 > // We have more than one element to upload, and some may be large files, > // which we will want to mmap instead of copying into memory This comment does not hold true anymore, I believe? We don't know that we have more than one element, do we? =)
Martin Robinson
Comment 8 2011-10-11 19:25:45 PDT
Martin Robinson
Comment 9 2011-10-11 19:28:38 PDT
Comment on attachment 109445 [details] Patch Thanks for the review! I landed this without the comment (and one more that was wrong).
Martin Robinson
Comment 10 2011-10-26 10:13:36 PDT
*** Bug 68173 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.