[Soup] ResourceHandleSoup does not handle encodedBlobData https://bugs.webkit.org/show_bug.cgi?id=52092

Reviewed by Gustavo Noronha Silva.

Source/WebCore:

Add support for sending encoded blob data during requests.

* platform/network/soup/ResourceHandleSoup.cpp:
(WebCore::addFileToSoupMessageBody): Added this helper.
(WebCore::blobIsOutOfDate): Ditto.
(WebCore::addEncodedBlobItemToSoupMessageBody): Ditto.
(WebCore::addEncodedBlobToSoupMessageBody): Ditto.
(WebCore::addFormElementsToSoupMessage): No longer flatten form data, as we
cannot do this in the case where the form data contains blobs. Now handle
the blob case.
(WebCore::loadResourceSynchronously): Add blob support for synchronous loading.

LayoutTests:

* platform/gtk/Skipped: Unskip tests which are now passing.

Canonical link: https://commits.webkit.org/85951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97219 268f45cc-cd09-0410-ab3c-d52691b4dbfc